plex/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: plex  
  labels:
    app: radarr
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.11.2
spec:
  selector:
    app: radarr
  ports:
    - name: webui
      port: 80
      targetPort: 7878
      protocol: TCP
  type: LoadBalancer
